# rbr-translator

./: .env.build  .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  update.html  vite.config.ts
changelog/: 0.250223.202707.md  0.250223.204809.md  0.250223.210021.md
latest/: latest-gitee.json  latest-github.json  latest-local.json
npm-scripts/: removeAutoImportFile.cjs  tauri-build.cjs  updateTauriConfigSchema.cjs
src/: App.vue  UpdateApp.vue  main.ts  update-main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.config.schema.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ShowMenuList.vue  VditorPreview.vue
src/global-shortcuts/: switchMainWindowVisible.ts
src/invoke-apis/: executeOnceApi.ts  invokeApi.ts
src/libs/: router.ts  updateRouter.ts
src/pages/: 01.main.menu.ts  02.driver-profile.menu.ts  03.main-options.menu.ts  04.credits.menu.ts  05.exit.menu.ts  index.vue
src/tray-menus/: 250.home.ts  500.check-update.ts  999.exit.ts
src/types/: global.d.ts  tauri.d.ts  util.d.ts
src/update-pages/: index.vue
src/utils/: currentWindowAutoSizeFromElement.ts  debounce.ts  defineGlobalShortcut.ts  defineMenu.ts  defineTrayMenu.ts  dragElementToMoveCurrentWindow.ts  executeOnce.ts  getWindowByLabel.ts  initGlobalShortcut.ts  initTrayMenu.ts  localStorageRef.ts  lock.ts  logGroup.ts  notification.ts  onTauriWebview.ts  openUpdateWindow.ts  preventDefaultListener.ts  simpleClone.ts
~/.tauri/: rbr-translator.key  rbr-translator.key.pub
(+89 files in other folders)
