[package]
name = "rbr-translator"
version = "0.250223.210021"
description = "RBR Translator"
authors = [ "xclhove" ]
edition = "2021"

[lib]
name = "rbr_translator_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[build-dependencies.tauri-build]
version = "2"
features = [ ]

[dependencies]
tauri-plugin-opener = "2"
serde_json = "1"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-pinia = "1.2.1"
tauri-plugin-http = "2"
lazy_static = "1.5.0"

  [dependencies.tauri]
  version = "2"
  features = [ "tray-icon", "image-png" ]

  [dependencies.serde]
  version = "1"
  features = [ "derive" ]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
